--- a/Source/Ability Mastery.csproj
+++ b/Source/Ability Mastery.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>false</DebugSymbols>
     <DebugType>none</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\1.5\Assemblies\</OutputPath>
+    <OutputPath>..\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -31,6 +31,20 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '1.5|AnyCPU'">
+    <OutputPath>..\1.5\Assemblies\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;v1_5</DefineConstants>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '1.6|AnyCPU'">
+    <OutputPath>..\1.6\Assemblies\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;v1_6</DefineConstants>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
       <HintPath>..\..\..\..\..\workshop\content\294100\2009463077\Current\Assemblies\0Harmony.dll</HintPath>
@@ -40,8 +54,9 @@
       <HintPath>..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Mastery.Core">
-      <HintPath>..\..\Mastery Core\1.5\Assemblies\Mastery.Core.dll</HintPath>
+    <Reference Include="Mastery.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Mastery Core\Assemblies\Mastery.Core.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -73,7 +88,11 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="VanillaPsycastsExpanded">
-      <HintPath>..\..\..\..\..\workshop\content\294100\2842502659\1.5\Assemblies\VanillaPsycastsExpanded.dll</HintPath>
+      <HintPath>..\..\..\..\..\workshop\content\294100\2842502659\1.6\Assemblies\VanillaPsycastsExpanded.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="VEF">
+      <HintPath>..\..\..\..\..\workshop\content\294100\2023507013\1.6\Assemblies\VEF.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="VFECore">
@@ -86,7 +105,7 @@
     <Compile Include="Data\Ability_Mastery_Extension.cs" />
     <Compile Include="Mod.cs" />
     <Compile Include="Patches\Abilities\Ability_Patches.cs" />
-    <Compile Include="Patches\Abilities\Mods\VCE\VCE_AbilityTracker_Patch.cs" />
+    <Compile Include="Patches\Abilities\Mods\VFE\VEF_AbilityTracker_Patch.cs" />
     <Compile Include="Patches\Abilities\Mods\VPE\Psycast_AbilityTracker_Patch.cs" />
     <Compile Include="Patches\Abilities\Mods\VPE\VPE_AbilityTracker_Patch.cs" />
     <Compile Include="Patches\Abilities\Vanilla\AbilityStatsManager.cs" />
